<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente">

  <EditText
      android:id="@+id/txtnom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_nom"
      android:inputType="textPersonName"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="100dp"
      tools:layout_editor_absoluteY="109dp" />

  <EditText
      android:id="@+id/txtapellido"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_apellido"
      android:inputType="textPersonName"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="100dp"
      tools:layout_editor_absoluteY="206dp" />

  <EditText
      android:id="@+id/txtemail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_email"
      android:inputType="textEmailAddress"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="100dp"
      tools:layout_editor_absoluteY="302dp" />

  <EditText
      android:id="@+id/txttelefono"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_telefono"
      android:inputType="phone"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="100dp"
      tools:layout_editor_absoluteY="401dp" />

  <Button
      android:id="@+id/btnGuard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_Guard"
      tools:layout_editor_absoluteX="110dp"
      tools:layout_editor_absoluteY="525dp" />
</androidx.constraintlayout.widget.ConstraintLayout>