<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedors">

    <EditText
        android:id="@+id/txtNomb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombr"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtcontra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_contra"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnGuard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Guard"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="366dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>